paperless/CiliumNetworkPolicy-paperless.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless
  namespace: paperless
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gotenberg
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tika
      toPorts:
        - ports:
            - port: "9998"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
